--- a/BookLibrary/appsettings.json
+++ b/BookLibrary/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookLibrary-BD253B68-A85A-4773-8838-6D3132903C42;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=BookLibrary;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
