--- a/BookLibrary.DataAccess/BookLibrary.DataAccess.csproj
+++ b/BookLibrary.DataAccess/BookLibrary.DataAccess.csproj
@@ -7,6 +7,10 @@
   <ItemGroup>
     <Compile Remove="Migrations\20210530071712_AddCovertyoetoDB.cs" />
     <Compile Remove="Migrations\20210530071712_AddCovertyoetoDB.Designer.cs" />
+    <Compile Remove="Migrations\20210531035252_AddproductToDB.cs" />
+    <Compile Remove="Migrations\20210531035252_AddproductToDB.Designer.cs" />
+    <Compile Remove="Migrations\20210531035432_AddProductToDB.cs" />
+    <Compile Remove="Migrations\20210531035432_AddProductToDB.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -14,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
